move pro/con psop/esop to separate page, add parameter draft for psop

--- a/src/markdown/help/employee-participation-guide/psop.mdx
+++ b/src/markdown/help/employee-participation-guide/psop.mdx
@@ -4,16 +4,102 @@ description: "Getting started with Ledgy’s PSOP template"
 images:
 ---
 
-The following guide will help you decide whether to choose phantom or option plan and which parameters need to be decided for a phantom plan.
+The following guide will help you decide which parameters need to be decided for a phantom plan.
 
-##### Pro
-* Only contractual agreement, no real share issuances/transfers involved, which makes it easier to administer (e.g. no need to go to the notary)
-* Easier to understand for employees who don’t have experience with options and the process of exercising them (just get a share of the exit sum, that’s it)
-* Employees only pay taxes when money is flowing, which makes it easier to bear
+#### The seven parameters you need to decide
+<table class="table table-bordered table-striped">
+  <tbody>
+    <tr>
+      <th>Parameter</th>
+      <th>What to decide</th>
+      <th>How to decide</th>
+    </tr>
+    <tr>
+      <td>Size and Type of Awards</td>
+      <td>
+        * Number of virtual shares reserved for employees, with one virtual share = one common share of the company
+        * Often expressed in percent of the total shares
+      </td>
+      <td>
+        * Discuss with your board, they have to approve the plan
+        * Common practice at the seed stage is 5% - 10% of the company on a fully diluted basis
+      </td>
+    </tr>
+    <tr>
+      <td>Vesting</td>
+      <td>
+        * Number of years
+        * Cliff or not
+        * Interval of allocation
+      </td>
+      <td>
+        * Discuss with your board
+        * Common practice: 4 years, monthly allocation, 1 year cliff
+      </td>
+    </tr>
+    <tr>
+      <td>Accelerated Vesting at IPO, change of control or exit</td>
+      <td>
+        Choose among these 3 possibilities:
+          * Single trigger (e.g. automatic full vesting)
+          * Double trigger (automatic full vesting only if (i) transaction (exit, IPO, change of control) occurred and (ii) lapse of e.g. 12 months thereafter or termination of employment)
+          * Accelerated vesting only as determined by board of directors
+      </td>
+      <td>
+        The common practice is b. as it provides employees with the security of accelerated vesting, while still protecting the buyer by preventing that all employees leave with the money directly after the transaction. Without this, the company might not be attractive to buyers.
+      </td>
+    </tr>
+    <tr>
+      <td>Exercise Price of Option (strike price)</td>
+      <td>
+        Choose among these 4 possibilities:
+        * Free of charge
+        * Corresponding to nominal value of common registered share
+        * Determination of board of directors on case by case basis
+        * Fair market value of one common registered share at time of grant (to be confirmed from tax law point of view)
+      </td>
+      <td>
+        The common practice is a. It is also the most employee friendly and the least bureaucratic one (no need to receive any payment from employee).
+      </td>
+    </tr>
+    <tr>
+      <td>Triggering Cash-Events</td>
+      <td>
+        * Several types of events can trigger a payment to phantom holders: the payment of dividends, a voluntary liquidation, a change of control / exit (transfer of >50% of voting rights or sale of its assets), IPO.
+        * Most are standard, but you should decide whether you want dividend payments to be a triggering event.
+      </td>
+      <td>
+        * Think about whether your startup could someday give out dividends or if will aim for an exit before.
+        * Common practice: to leave it open for all cases, you can simply add the dividends clause in the plan. Also this scenario mirrors best real shares.
+      </td>
+    </tr>
+    <tr>
+      <td>Triggering Cash-Events</td>
+      <td>
+        If the company should have a repurchase right on vested awards in case the employee is fired (in good terms).
+      </td>
+      <td>
+        The common practice is not to have a repurchase right and is more friendly for the employees.
+      </td>
+    </tr>
+    <tr>
+      <td>Termination during Vesting Period</td>
+      <td>
+        If the company should have a repurchase right on vested awards if the employee is fired (in good terms, i.e. not a bad leaver)
+      </td>
+      <td>
+        The common practice is not to have a repurchase right and is more friendly for the employees.
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-##### Contra
-* No tax optimization; payment of more taxes overall compared to ESOP plan
-* Employees don’t become real shareholders, putting them on a second layer compared to the founders and investors. This gives them less security that their rights are protected and makes them feel less connected to the company, reducing their long-term commitment.
-
-#### Parameters to decide
-* ...
+#### Standard parameters, but good to know
+<table class="table table-bordered table-striped">
+  <tbody>
+    <tr>
+      <td>Parameter</td>
+      <td>What to decide</td>
+    </tr>
+  </tbody>
+</table>
