--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -17,13 +17,11 @@ The following guide will help you get up and running with your employee particip
 
 ##### Setup
 
-1. With the help of the following guides, choose between
-    * [Stock option plan (ESOP)](/help/employee-participation-guide/esop)
-    * [Phantom option plan (PSOP)](/help/employee-participation-guide/psop)
+1. Choose between a stock option plan (ESOP) or phantom stock option plan (PSOP). [This guide](/help/employee-participation-guide/esop-vs-psop) helps you by comparing their advantages and disadvantes.
 
 2. Create your company on Ledgy (free), head to the documents page and download your template
 
-3. There are some parts to decide and adjust. The respective guides will help you.
+3. There are some parts to decide and adjust. The respective guides for [ESOP](/help/employee-participation-guide/esop) and [PSOP](/help/employee-participation-guide/psop) will help you to decide.
 
 4. Contact a law firm to answer any remaining questions about your specific needs
 
